# proj_utokyo

./: .dockerignore  .env.gcs  .firebaserc  .gcloudignore  .gitignore  API_README.md  DEPLOYMENT_GUIDE.md  Dockerfile  QUICKSTART.md  QUICKSTART_CLOUD_STORAGE.md  QUICKSTART_NO_DOCKER.md  README.md  README_main.md  UPDATE_GUIDE.md  app.py  deploy.sh  deploy_cloudbuilder.sh  firebase.json  main.py  mainpage_generator.py  openai_model.py  requirements-api.txt  researcher_page_generator.py  setup_cloud_storage.sh
article_search/: __init__.py  create_faiss_index.py
article_search/core/: __init__.py  article_search.py  article_search_faiss.py  article_search_faiss_gcsfuse.py  embed_article.py  openai_services.py  retry_failed_files.py  split_large_vector.py
kaken_package/: README.md  pyproject.toml
kaken_package/src/kaken_info/: cinii_api.py  cli.py  openalex.py  rag_llm.py  scraper.py
keyword_extractor/: README.md  SPEC.md  __init__.py  __main__.py  cli.py  clustering_engine.py  config.py  core.py  embedding_generator.py  export.py  keyword_generator.py  local_paper_loader.py  models.py  openalex_fetcher.py  paper_filter.py  representative_extractor.py  researcher_summarizer.py
prepare/: README.md  __init__.py  config.py  fetch_researchers.py  openalex_service.py  researcher_manager.py  verify_tokyo_univ_authors.py  verify_tokyo_univ_authors_sample.py
public/: index.html  results.html
researcher_search/: __init__.py  cli.py
researcher_search/analysis/: __init__.py  research_analysis.py  validate_research_data.py
researcher_search/api/: __init__.py  cli.py  (+1 more)
(+12 files in other folders)
